Remove STLLoader. Make it run on Android. Allow .obj in rn-cli.config.js